# streaming-pipeline

./: .gitattributes  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  hello.py  pyproject.toml  ruff.toml  sync_verification.sh
data/: eventlog_analysis.py  prometheus_metrics.py  robot_data.parquet
data/raw/experiment05/: 2025-05-30-20_22_56-avro-edge.parquet  2025-05-30-20_36_38-avro-cloud.parquet  df_jobs.parquet  df_stages.parquet  df_tasks.parquet
data/raw/experiment05/experiment05_cloud/: container_cpu_usage_seconds_total.parquet  container_fs_reads_bytes_total.parquet  (+40 more)
data/raw/experiment06/: 2025-05-30-22_07_40-avro-cloud.parquet  2025-05-30-22_09_58-avro-edge.parquet  df_jobs.parquet  df_stages.parquet  df_tasks.parquet
data/raw/experiment07/: 2025-12-19-20_42_31-avro-cloud.parquet  2025-12-19-20_49_14-avro-edge.parquet
data/raw/experiment08/: 2025-12-26-16_05_10-avro-cloud.parquet  2025-12-26-16_14_09-avro-edge.parquet
data/raw/final-01/: 2026-01-05-14_50_44-avro-cloud.parquet  2026-01-05-17_31_54-avro-edge.parquet
data/raw/first_experiment/: 2025-04-21-19_00_31-avro-edge.parquet  2025-04-21-19_17_24-avro-cloud.parquet  df_jobs.parquet  df_stages.parquet
data/raw/fourth_experiment/: 2025-04-27-19_35_23-avro-cloud.parquet  2025-04-27-19_38_10-avro-edge.parquet  cloud_logs.json  df_jobs.parquet  df_stages.parquet  df_tasks.parquet
data/raw/second_experiment/: df_jobs.parquet  df_stages.parquet
data/raw/third_experiment/: 2025-04-27-16_16_09-avro-cloud.parquet  2025-04-27-16_22_05-avro-edge.parquet  df_jobs.parquet  df_stages.parquet  df_tasks.parquet
docker/: Dockerfile  docker-compose.yaml  influxdb.yaml  rust-producer.Dockerfile  spark.Dockerfile  streaming-consumer.Dockerfile  streaming-producer.Dockerfile
docker/config/: spark-defaults.conf
k6_producer/: .env-example  robot_data.json  schema.json  script.js
k6_producer/exporter/: exporter.py
kubernetes/app-manifests/deepstorage/: minio-community.yaml
kubernetes/app-manifests/ingestion/: kafka.yaml
kubernetes/app-manifests/monitoring/: prometheus-alertmanager-grafana-botkube.yaml  secret.yaml-example
kubernetes/app-manifests/spark-operator/: spark-operator.yaml
kubernetes/cloud/app-manifests/: time_sync.yaml
kubernetes/cloud/yamls/: consumer-edge.yaml  consumer.yaml
kubernetes/deploy/: crb-spark-operator.yaml  etl-stream.yaml  pvc.yaml  pvcs.yaml  secret.yaml-example  test_run.yaml
kubernetes/edge/: README.md  argocd.md
kubernetes/edge/app-manifests/: time_sync.yaml
kubernetes/edge/yamls/: consumer.yaml
kubernetes/helm-charts/argo-cd/: values-cloud.yaml  values.yaml
kubernetes/helm-charts/cp-schema-registry/: values.yaml
kubernetes/helm-charts/kafka-ui/: values-cloud.yaml  values.yaml
kubernetes/helm-charts/kube-prometheus-stack/: values-cloud.yaml  values.yaml
kubernetes/helm-charts/minio-community/: values-cloud.yaml  values.yaml
kubernetes/yamls/: consumer-edge.yaml  consumer.yaml
monitoring/: Makefile  analyze_resources.py  monitor_resources.sh
notebooks/: analyze_ack_latency.ipynb  change_data_feed.ipynb  charts.py  functions.py  save_to_parquet.ipynb  test-kafka-consumer.ipynb  test-kafka-producer.ipynb  time_analysis.ipynb  utils.py  verify_cdf.ipynb
notebooks/experiment05/: logAnalysis.ipynb  time_analysis_from_parquet.ipynb
notebooks/experiment06/: logAnalysis.ipynb  time_analysis_from_parquet.ipynb
notebooks/experiment07/: cluster_time_drift.ipynb  time_analysis_from_parquet.ipynb
notebooks/experiment08/: analyze_ack_data.ipynb  analyze_spark_metrics.ipynb  analyze_tcp_dump.ipynb  analyzed_network_metrics_cloud.parquet  analyzed_network_metrics_edge.parquet  kafka_analysis.ipynb  time_analysis_from_parquet.ipynb
notebooks/final-01/: analyze_spark_metrics.ipynb  experiment_analysis.ipynb  generate_load_test_chart.py  generate_pod_disruption_chart.py  kafka_analysis.ipynb  time_analysis_from_parquet.ipynb  time_analysis_k6_metrics.ipynb
notebooks/first_experiment/: logAnalysis.ipynb  time_analysis_from_parquet.ipynb
notebooks/fourth_experiment/: logAnalysis.ipynb  time_analysis_from_parquet.ipynb
notebooks/second_experiment/: logAnalysis.ipynb
notebooks/tests/: change_data_feed.ipynb  test-kafka-consumer.ipynb  test-kafka-producer.ipynb  verify_cdf.ipynb
notebooks/third_experiment/: logAnalysis.ipynb  time_analysis_from_parquet.ipynb
rust_producer/: .env-example  Cargo.toml
rust_producer/data/: robot_data.parquet
rust_producer/schemas/: robot_data.json
rust_producer/src/: config.rs  main.rs  producer.rs  tcpdump_manager.rs
src/: .dockerignore  .env-example  data_process.py  eventlog_analysis.py  export_dataset.py  kafka_consumer.py  kafka_consumer_avro.py  kafka_producer.py  kafka_producer_avro.py  kafka_topic_configurator.py  main.py  prometheus_metrics.py  pyproject.toml  robot_dataset.py  save_to_parquet.ipynb
src/common/: logger.py  tcpdump_manager.py
src/deploy/: kafka_consumer_avro.py
src/schemas/: control_power.json  temperature.json
src/tests/: latency-test.py
terraform/: infra.tf
terraform/cloud/: .terraform.lock.hcl  infra.tf
terraform/cloud-deploy/: .gitignore  .terraform.lock.hcl  Makefile  README.md  env.tfvars.example  provider.tf
terraform/cloud-services/: infra.tf
terraform/edge/: infra.tf
terraform/edge-deploy/: .gitignore  README.md  main.tf  secret.tfvars-example
terraform/edge-services/: .terraform.lock.hcl  infra.tf
vector_producer/: vector.yaml
(+1081 files in other folders)
