[package]
name = "rust_producer"
version = "0.1.0"
edition = "2024"

[dependencies]
rdkafka = { version = "0.36" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = "=0.4.38"
parquet = { version = "52.2.0", features = ["arrow"] }
arrow = "52.2.0"
clap = { version = "4.0", features = ["derive", "env"] }
dotenvy = "0.15"
rand = "0.8"
log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
csv = "1.4.0"
schema_registry_converter = { version = "4.7.0", features = ["avro"] }
apache-avro = "0.21.0"
