[project]
name = "streaming-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "avro-python3>=1.10.2",
    "confluent-kafka[avro,schemaregistry]>=2.8.0",
    "fastavro>=1.10.0",
    "pandas>=2.2.3",
    "pyspark>=3.5.4",
    "python-dotenv>=1.0.1",
    "road-dataset",
    "seaborn>=0.13.2",
    "sparkmeasure>=0.24.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "minio>=7.2.15",
    "ruff>=0.9.3",
    "setuptools>=75.8.0",
    "taskipy>=1.14.1",
]

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.format]
preview = true

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "W",  # pycodestyle
    "PL", # pylint
    "PT", # flake8-pytest
    "UP", # pyupgrade,
    "I",  # isort
]

[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
produce = 'uv run --script ./src/main.py produce'
consume = 'uv run --script ./src/main.py consume'
process = 'uv run --script ./src/main.py process'

[tool.uv.sources]
road-dataset = { git = "https://gitlab.com/AlessioMascolini/roaddataset/" }
